[project]
name = "nightvac"
version = "0.1.0"
authors = [
	{ name="Theron Luhn", email="theron@luhn.com" },
]
description = "Preemptively vacuum your PostgreSQL database during off-hours"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luhn/nightvac"
"Bug Tracker" = "https://github.com/luhn/nightvac/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
